--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>素敵カフェ</h1>
-  <p>とっても素敵なカフェです。ぜひお越しください。</p>
+  <p>とっても素敵なカフェです。ぜひお越しください！Wifiもあります！</p>
   
 </body>
 </html>
